# ConstraintGuard

./: .gitignore  README.md  action.yml  pyproject.toml  requirements.txt  test_llm.py
.github/workflows/: constraintguard-scan-build.yml  constraintguard-score.yml  self-test.yml
TestDroneProject/: .constraintguard.yml  Makefile
TestDroneProject/Embedded Drone System2/: flight_controller.cpp
constraintguard/: __main__.py  pipeline.py
constraintguard/analyzers/: __init__.py  scan_build_runner.py
constraintguard/cli/: main.py
constraintguard/enrichment/: analyzer.py  policy.py  prompts.py  schemas.py
constraintguard/evidence/: extractor.py  models.py
constraintguard/llm/: client.py  cost.py  models.py
constraintguard/models/: __init__.py  enums.py  hardware_spec.py  risk_report.py  vulnerability.py
constraintguard/parsers/: __init__.py  constraint_loader.py  linker_script_parser.py  normalization.py  sarif_parser.py  sarif_rule_map.py  yaml_parser.py
constraintguard/reporting/: __init__.py  console.py  constraints_summary.py  explanation.py  formatting.py  json_writer.py  markdown_writer.py  remediation.py
constraintguard/scoring/: __init__.py  base_scores.py  engine.py  rules.py
docs/: ARCHITECTURE.md  CI_CD.md  DEVELOPER_GUIDE.md  GETTING_STARTED.md  QUICK_REFERENCE.md  TECHNICAL_DETAILS.md  demo_run.md
eval/: README.md  requirements-eval.txt  run_all.py
eval/experiments/: __init__.py  exp1_precision_at10.py  (+9 more)
examples/: demo_comparison.py  mock_pipeline.py  report.json  report.md  sample_report.json
paper_content/: evaluation_briefing.md
(+58 files in other folders)
