[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "constraintguard"
version = "0.1.0"
description = "Constraint-aware security prioritization for embedded C/C++ projects"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
llm = ["openai>=1.0", "anthropic>=0.30"]

[project.scripts]
constraintguard = "constraintguard.cli.main:cli_entry"

[tool.setuptools.packages.find]
include = ["constraintguard*"]
